Created Form1.RowTemplate5 and Form1.RowTemplate6; Edited Form1, ServerModule1, custom package dependencies, global_var and 3 more

--- a/theme/assets/theme.css
+++ b/theme/assets/theme.css
@@ -257,3 +257,9 @@ body.anvil-highlight .nav-elt.placeholder {
   src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v16/CWB0XYA8bzo0kSThX0UTuA.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
+
+.anvil-role-horizontal_scroll {
+  max-height: calc(100vh - 9rem);
+  overflow-y: scroll;
+  overflow-x: scroll;
+}
